Stop sidebar from jumping around during loading. (The width on the table-cell is ignored.)

--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -100,6 +100,7 @@ nav {
 }
 
 #branding {
+	width: 340px;
 	margin-bottom: 5px;
 	border-bottom-width: 12px;
 	border-bottom-style: solid;
